# pdf-review-extractor

./: .gitignore  README.md  pyproject.toml
src/pdf_review_extractor/: __init__.py  cli.py  extract.py  formatter.py  linemap.py
